added user middleware and custom exceptions
